# realitycam

./: .gitignore  .railwayignore  .vercelignore  CHANGELOG.md  CLAUDE.md  README.md  REVIEW.md  RealityCam-PRD.md  TODO.md  package.json  pnpm-lock.yaml  vercel.json
backend/: .env.example  Cargo.toml  DEPLOY_RAILWAY.md  Dockerfile  fly.toml  railway.toml
backend/.sqlx/: query-23f9a6976fc8e2ee120cdc0722b6878b695142ab65dffee0ef7f21c6da7f1037.json  query-42314227b162abd8ccbe8d880d7d93f67971b88a0b190a8056ac35711189a19d.json  query-57f45227ce1d0bea388f447e77cfa1aee95dbaa0a5d1f84ad84b13b5540fdc05.json  query-58ebfc690e211c383fe44621a67e92aef93c73e4919b1eaffe6989386f183376.json  query-72994243943af51e6ee25a6b2300e6a28f659c330539e1b2d0df1e28e374de7f.json  query-88fe1e6f1bac5901b63452ecea61f058ccab2249a29930e6cf4f83554ad0b23e.json  query-9b7e0959b5c1e0af0b1af9d77105e4f68c26f6a08d0a9b4bacce83abfce75015.json  query-a1a0af1741cca96e629ccac2c10b7fa496170e071d3d61d82929c8021ed851ce.json  query-aac872438bb6ace0380b76d4968cb4c93da6521d4d0f470f98a5462cf58bd277.json  query-c005e5667fd1c329abf3c61133edb6c5bd286140807439f4b901f0e431cd72ee.json  query-cba844c00a82c3b3b2fe6122c014a83b390e278ea1a79f2d350ff7ba785f7973.json  query-d41f0ea3e868489df198a5d3c5116e30351b009ee790a26e5fc1acd65280950e.json  query-e88940a402595dc5eeed26008acf946569364a712dd6cb77d694ddec3b945b00.json  query-f59061b5f3fec0f921e0faf7739cc48223c28804312d8c1dc5456a406c2be206.json
backend/migrations/: 20251122000001_create_devices.sql  20251122000002_create_captures.sql  20251122000003_create_verification_logs.sql  20251123000001_add_device_attestation_fields.sql  20251123000002_add_capture_s3_fields.sql  20251127000001_add_video_captures.sql  20251201000001_add_privacy_mode_fields.sql  20251205000001_create_debug_logs.sql  20251206000001_add_detection_results.sql  20251212004749_add_security_level_fields.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/middleware/: device_auth.rs  mod.rs
backend/src/models/: capture.rs  debug_log.rs  device.rs  evidence.rs  mod.rs  verification_log.rs
backend/src/routes/: captures.rs  captures_hash_only.rs  captures_video.rs  debug.rs  devices.rs  health.rs  mod.rs  test.rs  verify.rs
backend/src/services/: android_attestation.rs  attestation.rs  c2pa.rs  capture_attestation.rs  challenge_store.rs  debug_logs.rs  depth_analysis.rs  hash_chain_verifier.rs  metadata_validation.rs  mod.rs  privacy.rs  storage.rs  video_depth_analysis.rs  video_evidence.rs
backend/src/types/: capture.rs  detection.rs  hash_only.rs  mod.rs  (+4 more)
backend/tests/: challenge_freshness_integration.rs  hash_chain_verification_integration.rs  integration.rs  video_depth_analysis_integration.rs  video_evidence_integration.rs  video_upload_integration.rs
(+519 files in other folders)
