[package]
name = "realitycam-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
# Web framework
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# C2PA
c2pa = { version = "0.51", features = ["file_io"] }

# Cryptography
ed25519-dalek = "2"
sha2 = "0.10"
x509-parser = "0.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS
aws-sdk-s3 = "1"
aws-config = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dotenvy = "0.15"

[dev-dependencies]
# Testing
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "localstack"] }
fake = { version = "3", features = ["derive", "uuid", "chrono"] }
rand = "0.8"
assert_matches = "1.5"
wiremock = "0.6"
rstest = "0.23"
pretty_assertions = "1.4"

# Coverage
cargo-tarpaulin = { version = "0.31", optional = true }

[features]
default = []
test-coverage = ["cargo-tarpaulin"]

# Optimize for test speed
[profile.test]
opt-level = 1

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "warn"
