[package]
name = "realitycam-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "propagate-header"] }
tokio = { version = "1", features = ["full", "signal"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
c2pa = { version = "0.51", features = ["file_io"] }
ed25519-dalek = "2"
sha2 = "0.10"
x509-parser = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-sdk-s3 = "1"
aws-config = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dotenvy = "0.15"
http = "1"
base64 = "0.22"
